@@ -14,6 +14,7 @@ v0.9.3
 * [BGBUILD-251] Add ap-northeast-1 (tokyo) region for EBS plugin
 * [BGBUILD-248] Throw error in S3 plugin if invalid region is specified
 * [BGBUILD-252] rc.local script fills ~/.ssh/authorized_keys with a duplicate key every boot
+* [BGBUILD-250] EBS plugin incorrectly determines that non-US regions are not EC2 instances
 
 v0.9.2
 
